add base entities