@@ -4,11 +4,13 @@ plugins {
 	id("io.spring.dependency-management") version "1.1.3"
 }
 
+val ENABLE_PREVIEW = "--enable-preview"
+
 group = "com.example"
 version = "0.0.1-SNAPSHOT"
 
 java {
-	sourceCompatibility = JavaVersion.VERSION_17
+	sourceCompatibility = JavaVersion.VERSION_21
 }
 
 configurations {
@@ -25,7 +27,8 @@ dependencies {
 
 	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
 	implementation("org.springframework.boot:spring-boot-starter-mail")
-	implementation("org.springframework.boot:spring-boot-starter-security")
+//	implementation("org.springframework.boot:spring-boot-starter-security")
+    implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
 	implementation("org.springframework.boot:spring-boot-starter-web")
 
 	compileOnly("org.projectlombok:lombok")
@@ -40,4 +43,10 @@ dependencies {
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+//    jvmArgs(ENABLE_PREVIEW)
 }
+
+//tasks.withType<JavaCompile> {
+//    options.compilerArgs.add(ENABLE_PREVIEW)
+//}
+
